Thu Mar 26 12:00:47 MST 1998 Nathan Summers <rock@gimp.org>

	* iscissors.c: This should hopefully fix most of the UMRs
	(uninitialized memory reads) found with Purify.  No noticable
	change in iscissors's behavior, unfortunately.

Thu Mar 26 13:03:18 EST 1998 Adrian Likins <adrian@gimp.org>

	* app/app_procs.c app/brush_select.c app/brushes.c 
	app/brushes.h app/convert.c app/gradient.c app/gradient.h
	app/palette.c app/palette.h app/pattern_select.c app/patterns.c
	app/patterns.h:   Fixed up --no-data so that the various *_init() 
	routines always get called, and so that when in interactive mode
	the data can be loaded by the user even when started with --no-data.
	Fixes the blend bug too... 

Thu Mar 26 18:38:54 MET 1998 Sven Neumann <sven@gimp.org>

	app/gradient.c: fixed another --no-data problem; also the 
	editor now behaves better when it is resized  

Wed Mar 25 22:46:36 MST 1998 Nathan Summers <rock@gimp.org>

	* iscissors.c: fixed a problem with unintialized variables

Wed Mar 25 19:29:09 PST 1998 Manish Singh <yosh@gimp.org>

	* app/gimprc.c: support for parsing env vars in gimprc

Wed Mar 25 18:06:39 PST 1998 Manish Singh <yosh@gimp.org>

	* applied gimp-quinet-980122-0 and tweaked the tests a bit,
	this makes the optional library tests in configure.

	* applied gimp-jbuhler-980321-0, fixes more warnings in plug-ins

1998-03-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* app/asupsample.c (adaptive_supersample_area): Removed Sopwith's
	"speed optimizations", as they introduced bugs (exposed by using a
	high threshold value for supersampling).  They weren't much of a
	speed improvement, anyway (memcpy on very small regions, etc.).
	Also, assuming that all-bytes-zero is a floating-point 0 value is
	not portable.

Wed Mar 25 16:22:00 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/app_procs.c: now prints messages when starting up --no-splash
	
	* app/gimprc.c: now prints messages when starting up --no-splash
